<resources>
    <string name="app_name">Couplet</string>
    <string name="network_error_title">网络错误</string>
    <string name="network_error_message">网络断开，请确认接入网络</string>
    <string name="confirm">确认</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username_empty">用户名为空</string>
    <string name="invalid_username">非法的手机号</string>
    <string name="password_empty">密码为空</string>
    <string name="idcode_empty">请输入验证码</string>
    <string name="invalid_password">非法的密码</string>
    <string name="invalid_username_password">用户名或密码错误</string>
    <string name="username_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="code_hint">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="user_already_registered">该用户已注册</string>
    <string name="id_code_expired">验证码已过期</string>
</resources>
