<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar_layout"/>

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/toolBar"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/user_icon"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/userIcon"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_toRightOf="@id/userIcon"
        android:hint="@string/username_hint"
        android:inputType="number"
        android:maxLines="1"/>


    <ImageView
        android:id="@+id/passwordIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/userIcon"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/lock_icon"/>

    <EditText
        android:id="@+id/passwordInp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/passwordIcon"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_toRightOf="@id/passwordIcon"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <ImageView
        android:id="@+id/codeIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/passwordIcon"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/code_icon"/>

    <EditText
        android:id="@+id/codeInp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/codeIcon"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_toRightOf="@id/passwordIcon"
        android:hint="@string/code_hint"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <com.skateboard.couplet.ui.widget.RecipButton
        android:gravity="center"
        android:id="@+id/codeBtn"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_alignRight="@id/codeInp"
        android:layout_alignTop="@id/codeInp"
        app:millisInFuture="60000"
        app:countDownInterval="1000"
        app:countDownBg="@color/textColorPrimary"
        app:countdown_text="@string/get_code"
        app:normalBg="@color/colorPrimary"
        app:countDownTextColor="@color/x_FF888888"
        app:normal_text="@string/get_code"/>

    <com.skateboard.couplet.ui.widget.TransCircleButton
        android:id="@+id/registerBtn"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_below="@id/codeIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="90dp"
        app:bgColor="@color/colorAccent"
        app:shrinkInterval="8dp"
        app:text="@string/register"
        app:textColor="@color/textColorPrimary"
        app:textSize="15dp"/>

</RelativeLayout>