<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/toolbar_layout"/>

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/toolBar"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/user_icon"/>

    <EditText
        android:hint="@string/username_hint"
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/userIcon"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_toRightOf="@id/userIcon"
        android:inputType="number"
        android:maxLines="1"/>

    <ImageView
        android:id="@+id/passwordIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/userIcon"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/lock_icon"/>

    <EditText
        android:hint="@string/password_hint"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/passwordIcon"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_toRightOf="@id/passwordIcon"
        android:inputType="textPassword"
        android:maxLines="1"/>


    <com.skateboard.couplet.ui.widget.TransCircleButton
        android:elevation="23dp"
        app:bgColor="@color/colorAccent"
        app:shrinkInterval="8dp"
        app:text="@string/login"
        app:textColor="@color/textColorPrimary"
        app:textSize="15dp"
        android:id="@+id/loginBtn"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="90dp"/>

    <TextView
        android:background="?attr/selectableItemBackground"
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/loginBtn"
        android:layout_below="@id/loginBtn"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        android:textSize="15dp"/>

</RelativeLayout>